# colorimetry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README_JSR.md  chroma.csv  deno.json  deno.jsonc  validate_tm30.py
.cargo/: config.toml
.github/workflows/: build-and-test.yml  formatting.yml  linting.yml  rdme-check.yml
benches/: widergb.rs
cli/: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
cli/data/: test.csv
cli/src/: args.rs  commands.rs  lib.rs  main.rs  utils.rs
docs/img/: gamuts.html
examples/: cct.rs  cielab_areas.rs  cielab_hues.rs  cri.rs  iso_hues.rs  primaries.rs  spectral_locus.rs
examples/primaries/: main.rs
io/: Cargo.toml  README.md
io/examples/: spectrashop_to_json.rs
io/scripts/: spectrum_file_schema.json  spectrum_file_validate.py
io/src/: lib.rs  spectrashop.rs
io/tests/: spectrashop_data.rs
pkg/: LICENSE  LICENSE-MIT  README.md  colorimetry.d.ts  colorimetry.js  colorimetry_bg.js  colorimetry_bg.wasm  colorimetry_bg.wasm.d.ts  deno.json  package.json
plot/: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
plot/examples/: blackbody_locus.rs  sine_curve.rs  sine_curve.scss  sinus.rs  sinus.scss  srgb_gamut.rs  srgb_gamut.scss  xy_gamut_plots.rs
plot/src/: axis.rs  canvas.rs  chart.rs  chromaticity.rs  layer.rs  lib.rs  rendable.rs  style_attr.rs  svgdoc.rs  transforms.rs  view.rs  viewbox.rs
plot/src/axis/: range.rs  tick.rs
plot/src/chart/: chromaticity.rs  delegate.rs  range.rs
plot/src/chart/chromaticity/: xy.rs
plot/src/chart/chromaticity/xy/: gamut.rs
plot/src/chromaticity/: xy.rs
plot/src/chromaticity/xy/: gamut.rs
scripts/: validate_tm30.py
src/: cam.rs  cct.rs  colorant.rs  cri.rs  data.rs  error.rs  gamma.rs  geometry.rs  illuminant.rs  illuminants.rs  lab.rs  lib.rs  math.rs  munsell_matt.rs  obs.rs  observer.rs  physics.rs  prelude.rs  rgb.rs  rgbspace.rs  spc.rs  spectrum.rs  std_illuminants.rs  stdill.md  stdill.rs  stimulus.rs  traits.rs  viewconditions.rs  widergb.rs  xyz.rs  xyz_test.ts
src/cam/: cam02.rs  cam16.rs  mod.rs  viewconditions.rs
src/colorant/: ces_data.rs  cfi.rs  cfi_data.rs  munsell.rs  munsell_matt.rs  tcs.rs
src/colorant/munsell/: data.rs
src/colorant/munsell_matt/: data.rs
src/data/: cie_data.rs  illuminants.rs  mod.rs  munsell_matt.rs  observers.rs
src/illuminant/: cct.rs  cfi.rs  cie_data.rs  cie_illuminant.rs  cri.rs  illuminants.rs  led.rs  planck.rs  qth.rs  std_illuminants.rs  wasm.rs
src/lab/: gamut.rs  lch.rs
src/lab/gamut/: cielch_gamut_cie1931_d50.rs  cielch_gamut_cie1931_d65.rs  cielch_gamut_cie1964_d50.rs  cielch_gamut_cie1964_d65.rs  cielch_gamut_cie2015_10_d50.rs  cielch_gamut_cie2015_10_d65.rs  cielch_gamut_cie2015_d50.rs  cielch_gamut_cie2015_d65.rs
src/observer/: observer_data.rs  observers.rs  optimal.rs  rgbxyz.rs  spectral_locus.rs
src/observer/observer_data/: cie1931.rs  cie1964.rs  cie2015.rs  cie2015_10.rs
src/rgb/: gamma.rs  mod.rs  rgb.rs  rgbspace.rs  widergb.rs
src/rgb/rgbspace/: adobe_rgb.rs  cie_rgb.rs  display_p3.rs  srgb.rs
src/spectrum/: from_spectral_io.rs  into_spectrum.rs  wasm.rs  wavelength.rs
src/xyz/: chromaticity.rs  dominant.rs  rel_xyz.rs  wasm.rs
src/xyz/rel_xyz/: gamut.rs
xtask/: Cargo.toml
xtask/src/: chroma.rs  gen_observer.rs  gen_rgbspace.rs  gen_rgbxyz.rs  main.rs
xtask/templates/: rgbspace.rs.hbs  rgbxyz.rs.hbs
