[package]
name = "colorimetry"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
description = "Rust library for color modeling with JavaScript/WASM interfaces"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/colorimetry"
keywords = ["CIE", "CIELAB", "CIECAM16", "Colorimetry"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33"
approx = "0.5"
wasm-bindgen = "0.2"
once_cell = "1.0"
url = "2.5.2"
libm = "0.2.8"
thiserror = "1.0.63"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
colored = "2.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies] # for examples and tests
argmin = "0.10.0"
argmin-math = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
