[package]
name = "colorimetry"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
description = "Rust library for color modeling with JavaScript/WASM interfaces"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/colorimetry"
keywords = ["CIE", "CIELAB", "CIECAM16", "Colorimetry"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33"
approx = "0.5.1"
wasm-bindgen = "0.2"
once_cell = "1.0"
libm = "0.2.8"
thiserror = "1.0.63"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
strum = "0.26.3"
strum_macros = "0.26.4"
num-traits = "0.2.19"

[features]
defaults = ["cie-illuminants", "supplemental-observers"]
cie-illuminants = []
cct = []
supplemental-observers = []
cri = ["cct"]
munsell = []

[dev-dependencies] # for examples and tests
argmin = "0.10.0"
argmin-math = "0.4.0"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "cct"
required-features = ["cct"]

[[example]]
name = "cri"
required-features = ["cri"]

[package.metadata.docs.rs]
all-features = true
