[package]
name = "colorimetry"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
description = "Rust Spectral Colorimetry library with JavaScript/WASM interfaces"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/colorimetry"
keywords = ["CIE", "CIELAB", "CIECAM16", "Colorimetry"]
license = "MIT OR Apache-2.0"

# Exclude files not needed when used as a Rust library
# from being published to crates.io
exclude = [".github", ".vscode", "pkg"]

[workspace]
members = [
    "xtask",
    "."  # main crate
]

[dependencies]
nalgebra = "0.33"
approx = "0.5.1"
libm = "0.2.8"
thiserror = "1.0.63"
strum = {version = "0.25", features = ["derive"]} # for enum iteration and derive macros
num-traits = "0.2.19"
geo = "0.29.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.69"

[features]
defaults = ["cie-illuminants", "supplemental-observers", "gamut-tables"]
cie-illuminants = []
cct = []
supplemental-observers = []
cri = ["cct"]
munsell = []
cfi = ["cct", "supplemental-observers"]
gamut-tables = []

[dev-dependencies] # for examples and tests
argmin = "0.10.0"
argmin-math = "0.4.0"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.2.0"
criterion = "0.6.0"
plotters = {version ="0.3.7", default-features = false, features = ["svg_backend"]}

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "cct"
required-features = ["cct"]

[[example]]
name = "cri"
required-features = ["cri"]

[[bench]]
name = "widergb"
harness = false

[package.metadata.docs.rs]
all-features = true
