[package]
name = "colorimetry-cli"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
description = "A CLI for the colorimetry crate"
license = "MIT OR Apache-2.0"

[dependencies]
csv = { version = "1.3", default-features = false}
clap = { version = "4", features = ["derive"] }  # for argument parsing
colorimetry = { path = ".." , features = ["cie-illuminants"]} # to use the main library

[[bin]]
name = "colorimetry"
path = "src/main.rs"

