[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }  # for argument parsing
strum = {version = "0.27", features = ["derive"]}  # for enum iteration and derive macros
colorimetry = { path = ".." , features = ["supplemental-observers", "cie-illuminants"]} # to use the main library